--- a/style.css
+++ b/style.css
@@ -1,27 +1,26 @@
-.container-1{
+.top-row{
     display: flex;
-    justify-content: space-between;
     margin-top: 5em;
-    margin-right: 30em;
+    align-content:  flex-start;
+    margin-left: 15%;
+
    
 }
 .logo{
     margin-top: 50px;
-    margin-left: 15em;
     background-color: white;
-
+    
 }
 .text-box{
     background-color: white;
     width: 35em;
-    height: 25em;
+    height: 22em;
     margin-top: 20px;
-    margin-right: 12em;
-    
+    margin-left: 10%;
 }
 
 .container-2{
-    margin-top: 12em;
+    margin-top: 5em;
     display: flex;
     justify-content:space-evenly;
     align-items: center;
@@ -30,14 +29,17 @@
 
 
 .first-text{
-    font-size: 40px;
+    font-size: 30px;
     display: flex;
-    justify-content: space-evenly;
-    align-content: space-between;
-    justify-content: flex-start;
+    justify-content: space-between;
+    width: 80%;
+    margin-top: 1em;
+    
 
 }
  #insta{
+     font-weight: bold;
+     font-size: 20px;
      
  }
 
@@ -48,6 +50,38 @@
 
  .second-text{
      display: flex;
-     justify-content: flex-start;
-     font-size: 35px;
+     justify-content: space-between;
+     font-size: 20px;
+     margin-top: 1em;
+     margin-bottom: 1em;
  }
+
+ .second-text span{
+     font-weight: bold;
+ }
+
+ .last-text{
+     font-size: 25px;
+ }
+
+ #blue{
+     color: blue;
+ }
+
+ #light-text{
+     margin-top: 20px;
+     color: rgb(107, 105, 105);
+     font-size: 20px;
+ }
+ #light-text span{
+    font-weight: bold;
+    color: black;
+}
+
+.container-3{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    align-items: flex-end;
+    font-weight: bold;
+}
